Added grid layout for portfolio, finished contact info formatting, added about me image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ body {
     background-color:  #616161;
     font-family: "Raleway", sans-serif;
     color: #fff;
+    margin: 0;
 }
 
 .sidebar {
@@ -47,34 +48,70 @@ a:hover {
 
 .content {
     margin-left: 300px;
+
 }
 
 .portfolio {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 0px;
     background-color: #f1f1f1;
     color: #000;
     text-align: center;
-    
+    width: 100%;
+}
+
+.portfolio-images {
+    width: 100%;
+    border: none;
+}
+
+#app-1 {
+    grid-column-start: span 2;
 }
 
 .about-me {
     background-color: #616161;
     color: #fff;
-    font-weight: bold;
+    font-weight: 600;
     text-align: center;
 }
 
 .about-me h4 {
     color: #fff;
-    font-weight: bold;
+    font-weight: 600;
     font-size: 20px;
 }
 
-.contact-info {
+#about-me-pic {
+    width: 350px;
+    height: 363.917px;
+}
+
+.contact-info { 
     background-color: #f1f1f1;
     color: #000;
     text-align: center;
 }
 
+.contact-links {
+    display: flex;
+    justify-content: space-evenly;
+   
+}
+
+.contact-links a {
+    color: #000;
+    font-size: 15px;
+}
+
 .contact-info, .portfolio h4 {
     font-size: 20px;
+    font-weight: 600;
+}
+
+.logos {
+    width: 20px;
+    height: 20px;
 }
