--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,8 +68,22 @@ a:hover {
     width: 100%;
 }
 
-.portfolio:first-child {
+.portfolio img:first-child {
     width: 100%;
+    opacity: 1;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.portfolio img:nth-child(n+2) {
+    width: 50%;
+    opacity: 1;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.portfolio img:hover {
+
 }
 
 .about-me {
