added pointer on hover

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,6 +94,7 @@ a:hover {
 
 .portfolio .images:hover {
     opacity: .5;
+    cursor: pointer;
 }
 
 /*styles to caption each image while maintaining page positioning*/
